objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_IMR_IME_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Its Checks for IMR and IME products to be sent for Approval</description>
        <label>IMR_IME_Approval_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IMS_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It Checks for the IME products for Approval</description>
        <label>IMS_Approval_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IMS_IME_Product__c</fullName>
        <formula>Apttus_Config2__ProductId__r.ProductCode =&apos;41822784&apos; ||  Apttus_Config2__ProductId__r.ProductCode =&apos;41777796&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS/IME Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr1_Yr2__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field is populated from LineItem Trigger class.</description>
        <label>% Increase Yr1- Yr2</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr2_Yr3__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field is populated from LineItem Trigger class.</description>
        <label>% Increase Yr2- Yr3</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Increase_Yr3_Yr4__c</fullName>
        <description>This field is created as part of JIRA DOC-12697. Value in this field is populated from LineItem Trigger class.</description>
        <label>% Increase Yr3- Yr4</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Industry_Code__c</fullName>
        <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_SSD_Sold_To__r.LCRM_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Info_PlanType__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Info_PlanType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Info_RenewalDate__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Info_RenewalDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Multi_Tiered_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of DOC-3563</description>
        <label>Is Multi Tiered Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Print_TP__c</fullName>
        <formula>IF( APTS_Product_Delivery__c  = &apos;Print&apos;, True, False)</formula>
        <label>Is Print ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Special_Offer_Lapsed__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Info_PlanType__c == &apos;S00&apos; &amp;&amp;   ISPICKVAL(Apttus_Config2__LineStatus__c , &apos;Cancelled&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Special Offer Lapsed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Category_Group__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Item_Category_Group__c</formula>
        <label>Item Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Keep_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Legal_Contract_Clauses__c</fullName>
        <label>Legal Contract Clauses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Renew for All and Split Venue</fullName>
                </value>
                <value>
                    <fullName>Auto-Renew for All</fullName>
                </value>
                <value>
                    <fullName>Auto-Renew for Named Products</fullName>
                </value>
                <value>
                    <fullName>Auto-Renew for Named Products and Split Venue</fullName>
                </value>
                <value>
                    <fullName>Non Availability of Funds</fullName>
                </value>
                <value>
                    <fullName>NY Choice of Law and Venue</fullName>
                </value>
                <value>
                    <fullName>SLF-Dissolution Pay 12 Month Charges</fullName>
                </value>
                <value>
                    <fullName>SLF-Material Change up or down and reorg</fullName>
                </value>
                <value>
                    <fullName>SLF-Merger with Another West Subscriber</fullName>
                </value>
                <value>
                    <fullName>Solo Becomes a Judge</fullName>
                </value>
                <value>
                    <fullName>Solo Goes into Military Service</fullName>
                </value>
                <value>
                    <fullName>Solo Joins Another West Subscriber</fullName>
                </value>
                <value>
                    <fullName>Solo Medical</fullName>
                </value>
                <value>
                    <fullName>Solo Public Office</fullName>
                </value>
                <value>
                    <fullName>Solo Retirement</fullName>
                </value>
                <value>
                    <fullName>Split Venue</fullName>
                </value>
                <value>
                    <fullName>Variable One-Time Out</fullName>
                </value>
                <value>
                    <fullName>Variable One-Time Out - Product specific</fullName>
                </value>
                <value>
                    <fullName>WL PRO solo certifications</fullName>
                </value>
                <value>
                    <fullName>48 or 60 Month Min Term Addendum - NEW Sales</fullName>
                </value>
                <value>
                    <fullName>48 or 60 Month Min Term Addendum - RENEWAL Sales</fullName>
                </value>
                <value>
                    <fullName>90 Day Chargeable Software POC</fullName>
                </value>
                <value>
                    <fullName>90 Day Chgble Software POC 1 Time Out after 12 Months</fullName>
                </value>
                <value>
                    <fullName>90 Day Non-Chargeable Software POC</fullName>
                </value>
                <value>
                    <fullName>Auto Renew to Lapse</fullName>
                </value>
                <value>
                    <fullName>Auto Renew to MTM WCMP/APP/LSP</fullName>
                </value>
                <value>
                    <fullName>Autorenewal for all and split venue</fullName>
                </value>
                <value>
                    <fullName>Corp Acquisition by another entity</fullName>
                </value>
                <value>
                    <fullName>Corp WL Monitored Usage</fullName>
                </value>
                <value>
                    <fullName>Correctional Facility Certifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Line_Level_Approval_Required__c</fullName>
        <formula>OR(APTS_Corporate_Approval_Required__c , APTS_Small_Law_Approval_Required__c , APTS_Government_Approval_Required__c , APTS_Guidance_Approval_Required__c,APTS_Calculat_Min_YOY_Approval_Required__c,APTS_Minimum_YoY_Increase__c, APTS_Print_Product_Approval_Required__c,LML_Approval_Required__c,APTS_Product_Approval_Required__c,APTS_Bridg_Contract_Term_Approval__c,Bundle_Group_Approval_Required__c,LMS_Channel_Approval_Required__c,Findlaw_Approval_Required__c,APTS_PPC_Approval_Required__c,APTS_RepType_Approval_Required__c,APTS_IMR_IME_Approval_Required__c,APTS_FL_UpgradeDowngradeApprovalRequired__c,APTS_IMS_Approval_Required__c,APTS_WaivedProduct_Approval_Required__c,APTS_Short_Term_Bridge_Approval__c,APTS_FS_IM_Approval_Required__c, APTS_1_Year_APP_Approval_Required__c,APTS_Answer_Service_Approval__c,APTS_FL_AnnualApprovalRequired__c,APTS_Medium_Law_Approval_Required__c,APTS_Tax_Approval_Required__c,APTS_Canada_Approval_Required__c,APTS_ExposurePack_Approval_Required__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Level Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_MLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Margin_Type__c</fullName>
        <description>Projects the Product&apos;s &quot;Margin Type&quot; picklist value into the Line Item as TEXT.  If empty, returns &apos;None&apos;. This is primarily used as a dimension for FindLaw approvals and guidance.</description>
        <formula>BLANKVALUE(TEXT(Apttus_Config2__ProductId__r.APTS_Margin_Type__c), &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Projects the Product&apos;s &quot;Margin Type&quot; picklist value into the Line Item as TEXT.  If empty, returns &apos;None&apos;. This is primarily used as a dimension for FindLaw approvals and guidance.</inlineHelpText>
        <label>Margin Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MaxQuantity_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SOC-9890</description>
        <label>MaxQuantity_Approval_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Discount__c</fullName>
        <formula>0.20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Effective_Discount__c</fullName>
        <label>Max Effective Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Quantity__c</fullName>
        <formula>Apttus_Config2__Quantity__c  +  Apttus_Config2__AssetLineItemId__r.Apttus_Config2__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Media_High_Level_Code__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Media_High_Level_Code__c</formula>
        <label>Media High Level Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Media_High_Level__c</fullName>
        <formula>Apttus_Config2__ProductId__r.Media_High_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media High Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Media_Lower_Level_Code__c</fullName>
        <description>Projects the Line Item&apos;s Product&apos;s Media Lower Level Code into Line Item by formula.</description>
        <formula>Apttus_Config2__ProductId__r.APTS_Media_Lower_Level_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Projects the Line Item&apos;s Product&apos;s Media Lower Level Code into Line Item by formula.</inlineHelpText>
        <label>Media Lower Level Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Medium_Law_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medium Law Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_OY_Increase__c</fullName>
        <label>Minimum OY Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Minimum_YoY_Increase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minimum YoY Increase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Module_Points__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.APTS_Total_Number_of_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_NFC_Qty_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFC_Qty_Approval_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_New_Bridge_Discount__c</fullName>
        <description>This field is created to replace the existing APTS_Bridge_Discount__c(Picklist) field</description>
        <label>Bridge Discount.</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_New_Subscriptions_Total__c</fullName>
        <label>New Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Attorneys__c</fullName>
        <formula>IF (TEXT(Apttus_Config2__ProductId__r.Apttus_Config2__Uom__c) = &quot;Attorneys&quot;,  Apttus_Config2__Quantity__c * 2, 

IF(TEXT(Apttus_Config2__ProductId__r.Apttus_Config2__Uom__c) = &quot;Seats&quot;, 
IF(AND(Apttus_Config2__ProductId__r.APTS_Media_High_Level_Code__c = &apos;06&apos; ,
OR(Apttus_Config2__ProductId__r.APTS_Media_Lower_Level_Code__c = &apos;AB&apos;, Apttus_Config2__ProductId__r.APTS_Media_Lower_Level_Code__c = &apos;OR&apos;),
OR(Contains(LOWER(Apttus_Config2__ProductId__r.Name),&apos;patron&apos;),Contains(LOWER(Apttus_Config2__ProductId__r.Name),&apos;correctional&apos; ),Contains(LOWER(Apttus_Config2__ProductId__r.Name),&apos;corr&apos;)))
,1,Apttus_Config2__Quantity__c) ,

IF(AND(TEXT(Apttus_Config2__ProductId__r.Apttus_Config2__Uom__c) = &quot;FTE&quot; ,Apttus_Config2__ProductId__r.APTS_Media_High_Level_Code__c = &apos;06&apos; , Apttus_Config2__ProductId__r.APTS_Media_Lower_Level_Code__c = &apos;LW&apos;), 
IF( AND( Apttus_Config2__Quantity__c &gt;= 1,Apttus_Config2__Quantity__c &lt;= 10000) , 5, 
IF( AND( Apttus_Config2__Quantity__c &gt;= 10001,Apttus_Config2__Quantity__c &lt;= 20000) ,10, 
IF( AND( Apttus_Config2__Quantity__c &gt;= 20001,Apttus_Config2__Quantity__c &lt;= 30000) , 15, 
IF( AND( Apttus_Config2__Quantity__c &gt;= 30001,Apttus_Config2__Quantity__c &lt;= 40000) , 20, 
IF( AND( Apttus_Config2__Quantity__c &gt;= 40001,Apttus_Config2__Quantity__c &lt;= 50000) , 25,25))))) , 

IF(AND(TEXT(Apttus_Config2__ProductId__r.Apttus_Config2__Uom__c) = &quot;Each&quot;,Apttus_Config2__Quantity__c &gt;= 1,APTS_Proposal_Business_Unit__c &lt;&gt; &apos;Tax Professional&apos;), Apttus_Config2__Quantity__c, IF(AND(Apttus_Config2__ProductId__r.APTS_Media_High_Level_Code__c = &apos;06&apos;,Apttus_Config2__ProductId__r.APTS_Media_Lower_Level_Code__c = &apos;AB&apos;,  ISPICKVAL( Apttus_Config2__ProductId__r.Family , &apos;RISK SOLUTIONS&apos;) ),Apttus_Config2__Quantity__c,null)))))</formula>
        <label>Number of Attorneys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Attorneys_on_Acct__c</fullName>
        <formula>/*Apttus_Config2__ConfigurationId__r.Banded_Number_of_Users__c */

IF(NOT(ISPICKVAL(Apttus_Config2__LineStatus__c, &apos;New&apos;)), Apttus_Config2__AssetLineItemId__r.APTS_Number_of_Attorneys__c , Apttus_Config2__ConfigurationId__r.Banded_Number_of_Users__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Attorneys on Acct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Online_Incremental__c</fullName>
        <label>Online Incremental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Quantity__c</fullName>
        <description>Created by Rajan : For US DLT-11055. For Corporate per-seat product, AEM need min quantity at line item level. So created this field to store Cart Line item Quantity. This field will be populate only once during record creation through process builder.</description>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PAGEO_Price__c</fullName>
        <formula>APTS_Combination_Key__r.APTS_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAGEO Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_PPC Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Landing_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_PPC Landing Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Mgmt_Fee_Override__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.APTS_PPC_Mgmt_Fee_Override__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPC Management Fee Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PPC_Rounded_Value__c</fullName>
        <formula>Apttus_Config2__AttributeValueId__r.APTS_PPC_Rounded_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPC Rounded Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Partial_Year_Charge_Eligible__c</fullName>
        <label>Partial Year Charge Eligible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Cap_Adjustment_Percentage__c</fullName>
        <label>Price Cap Adjustment Percentage</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Print_Branding__c</fullName>
        <label>Print Branding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Print_Product_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Product Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Print_Purchase_Options__c</fullName>
        <description>Used to calculate Tally on Q/P</description>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.SCS_Print_Purchase_Options__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to calculate Tally on Q/P</inlineHelpText>
        <label>Print Purchase Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Print_Type__c</fullName>
        <formula>TEXT(Apttus_Config2__ProductId__r.APTS_Filter_Print_Type__c)</formula>
        <label>Print Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <formula>Apttus_Config2__ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Delivery_Attribute__c</fullName>
        <formula>TEXT(Apttus_Config2__AttributeValueId__r.APTS_Product_Delivery__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Delivery Attribute</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Delivery__c</fullName>
        <label>Product Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Detail__c</fullName>
        <formula>APTS_Combination_Key__r.APTS_Configuration_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Details__c</fullName>
        <formula>APTS_Combination_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APTS_Product_Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Family__c</fullName>
        <description>Product family.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Group_Primary_Material__c</fullName>
        <formula>CASE( APTS_Media_High_Level_Code__c ,
&quot;07&quot;, &quot;West Complete Library Sub:40666420&quot;,
&quot;21&quot;, &quot;West Complete Library Sub:40666420&quot;,
CASE( UPPER(Apttus_Config2__ProductId__r.LCRM_Sub_Bu__c), &apos;CANADA&apos; ,&quot;Canada Proflex:41972767&quot;,
CASE( APTS_Cat_L2__c ,
$Label.APTS_Clear_Product_Family, &quot;CLEAR PROFLEX:41308780&quot;,
$Label.Pondera_L2_Value, &quot;CLEAR PROFLEX:41308780&quot;,
CASE( APTS_Cat_L3__c, $Label.APTS_Ediscovery_Product_Family ,IF((APTS_Service_Number__c == &quot;42129930&quot; || APTS_Service_Number__c == &quot;42129928&quot;), &quot;eDiscovery Point Trans Hosting ProFlex:42129928&quot;, IF((APTS_Service_Number__c == &quot;41841757&quot;) || (APTS_Media_High_Level_Code__c == &quot;13&quot; &amp;&amp; APTS_Media_Lower_Level_Code__c == &quot;ST&quot;) || (APTS_Service_Number__c == &quot;41841759&quot;), &quot;eDiscovery Point LT ProFlex:41841759&quot;, &quot;&quot;)),
&quot;WEST PROFLEX:40757482&quot;
))
))</formula>
        <label>Product Group Primary Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name__c</fullName>
        <formula>IF( Apttus_Config2__OptionId__c &lt;&gt;&apos;&apos;, Apttus_Config2__OptionId__r.Name , Apttus_Config2__ProductId__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Or_Option_Name__c</fullName>
        <formula>IF( Apttus_Config2__OptionId__c &lt;&gt;&apos;&apos;, Apttus_Config2__OptionId__r.Name , Apttus_Config2__ProductId__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product or Option name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Pricing_Model__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Product_Pricing_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Pricing Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Variant_ID__c</fullName>
        <label>Product Variant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Program_ID__c</fullName>
        <formula>IF(APTS_Group_Primary_Material__c==&apos;40666420&apos;,&quot;WCMP&quot;,IF(NOT(ISBLANK(APTS_Corporate_Select__c)),&quot;CPRO&quot;,&quot;&quot;))</formula>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Promo_Quote_Yearly_Value__c</fullName>
        <description>Total value of annual value of quote based on all line items in the cart (including one time charges, short term contracts and contract term subscriptions)</description>
        <formula>((Apttus_Config2__ConfigurationId__r.APTS_Promo_Line_Item_Sub_Annual__c  * 12) +  Apttus_Config2__ConfigurationId__r.APTS_Promo_Quote_Yearly_Value_Std__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total value of annual value of quote based on all line items in the cart (including one time charges, short term contracts and contract term subscriptions)</inlineHelpText>
        <label>APTS_Promo_Quote_Yearly_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Business_Unit__c</fullName>
        <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_Proposal_Business_Unit__c )</formula>
        <label>Proposal Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Group</label>
        <referenceTo>APTS_Group__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Purchase_Options__c</fullName>
        <description>Used for calculating Tally on Q/P</description>
        <formula>IF( APTS_Media_High_Level_Code__c = &apos;21&apos; &amp;&amp; APTS_Media_Lower_Level_Code__c = &apos;CQ&apos;, &apos;APP&apos;, TEXT( Apttus_Config2__AttributeValueId__r.eBook_Purchase_Options__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for calculating Tally on Q/P</inlineHelpText>
        <label>Purchase Options</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RLP_FLApproval_Required__c</fullName>
        <formula>IF(AND( APTS_Product_Code__c !=&apos;40656701&apos;),

IF( AND( ISPICKVAL( Apttus_Config2__LineStatus__c, &apos;Renewed&apos;), ISPICKVAL( APTS_Contract_Term__c, &apos;1 Year&apos;), APTS_DefaultNetPrice__c &lt; 0.9* Apttus_Config2__ExtendedPrice__c, APTS_DefaultNetPrice__c &gt;= 0.5* Apttus_Config2__ExtendedPrice__c, APTS_DefaultNetPrice__c &lt; 1.02 * APTS_FL_Current_price__c), true, IF(

AND( ISPICKVAL( Apttus_Config2__LineStatus__c, &apos;Renewed&apos;), ISPICKVAL( APTS_Contract_Term__c, &apos;2 Years&apos;), APTS_DefaultNetPrice__c &lt; 0.85* Apttus_Config2__ExtendedPrice__c, APTS_DefaultNetPrice__c &gt;= 0.5* Apttus_Config2__ExtendedPrice__c, APTS_DefaultNetPrice__c &lt; 1.02 * APTS_FL_Current_price__c), true, IF(


AND( ISPICKVAL( Apttus_Config2__LineStatus__c, &apos;Renewed&apos;), ISPICKVAL( APTS_Contract_Term__c, &apos;3 Years&apos;), APTS_DefaultNetPrice__c &lt; 0.8* Apttus_Config2__ExtendedPrice__c, APTS_DefaultNetPrice__c &gt;= 0.5* Apttus_Config2__ExtendedPrice__c, APTS_DefaultNetPrice__c &lt; 1.02 * APTS_FL_Current_price__c),true, false))),false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FL RLP Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Approval_Required__c</fullName>
        <formula>TEXT(Apttus_Config2__AssetLineItemId__r.APTS_Renewal_Eligible__c) = &apos;No&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Description__c</fullName>
        <description>DOC-7195 (Version / Non Version Product)</description>
        <formula>If((APTS_Proposal_Business_Unit__c = &apos;Corp OneOTC US&apos; || APTS_Proposal_Business_Unit__c = &apos;Corp OneOTC UK&apos;)
&amp;&amp; ISPICKVAL(Apttus_Config2__LineStatus__c , &apos;Renewed&apos;),
If(NOT(ISBLANK(Apttus_Config2__OptionId__c)) &amp;&amp; NOT(ISBLANK(Apttus_Config2__OptionId__r.APTS_Availability_Date__c)),
LEFT(Apttus_Config2__OptionId__r.APTS_Renewal_Version_Description__c, 80),
If(NOT(ISBLANK(Apttus_Config2__ProductId__c)) &amp;&amp; NOT(ISBLANK(Apttus_Config2__ProductId__r.APTS_Availability_Date__c)),
LEFT(Apttus_Config2__ProductId__r.APTS_Renewal_Version_Description__c, 80),&apos;&apos;)),&apos;&apos;)</formula>
        <label>Renewal Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Type_Default__c</fullName>
        <description>Created this field for the JIRA#: DOC-1577.</description>
        <formula>IF(
(Apttus_Config2__ProductId__r.APTS_Cat_L5__c== &apos;L5_T736510_FP&apos; ||
Apttus_Config2__ProductId__r.APTS_Cat_L5__c== &apos;L5_T736500_FP&apos; )
,&apos;Evergreen&apos;,&apos;Auto Renew&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Type Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Renew</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Term Commitment</fullName>
                </value>
                <value>
                    <fullName>Non-Renewable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_RepType_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RepType Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Rep_Type_Description__c</fullName>
        <formula>IF(OR(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-Account Manager&apos;,  
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-Team Lead Acct Mgmt&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-Reg Mgr of Acct Mgm&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-Director of Acct Mg&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Medium-Account Manager&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;Home Office-FindLaw Renewal-Specialist&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-Reg Mgr of Sales&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-Director of Sales&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-Sales Rep&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Medium-Sales Rep&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Medium-Sr Sales Rep&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Medium-Assoc Acct Exec&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;Home Office-FL Medium Renewal-Specialist&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-Abogados MLF-Sales Rep&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Medium-Reg Mgr of Sales&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Medium-Reg Mgr of Acct Mgm&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-Abogados-Sales Rep&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-Abogados-Reg Mgr of Sales&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw-SAR&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-Super Lawyers-Sr Sales Rep&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-Super Lawyers-Reg Mgr of Sales&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Strat-Reg Mgr of Sales&apos;,
Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Rep_Type_Description__c = &apos;SAM-FindLaw Strat-Sales Rep&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep Type Description</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>